# VocQGen-streamlit

./: .dockerignore  .gitignore  Deploy-on-AWS.md  Dockerfile  Makefile  Pipfile  README.md  docker-compose.proxy.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_with_file.py  ui.py  utils.py
.streamlit/: secrets.example.toml
components/: faq.py  introduction.py  sidebar.py
docs/: Deploy-on-AWS.md
playground/: test_widgets.py
test-data/: AWL_sublist1_medium.xlsx  AWL_sublist1_small.xlsx  Example.xlsx
tests/: test_ngram.py  test_openai.py
vocqgen/: chat.py  config.py  core.py  dict_helper.py  inflections.py  ngram.py  nlp_helper.py  parser.py  utils.py  word_cluster.py
