[project]
name = "VocQGen"
version = "0.0.1"
description = "Vocabulary Question Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.1.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "spacy>=3.8.0",
    "streamlit>=1.29.0",
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "lemminflect>=0.2.3",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.2",
    "unimorph>=0.0.4",
    "tenacity>=9.0.0",
    "numpy>=2.2.3",
]
